tests/errors/typeck.kt
// Expect type error to + on line 8
fun fib(i : Int) : Int {
   return 11
   }

fun main() {
  var i : Int = 0;
  i = 0 + 2.5;
}